fix for logo text spacing

--- a/client/src/styles/_footer.scss
+++ b/client/src/styles/_footer.scss
@@ -22,6 +22,10 @@
     }
   }
 
+  .logo-col > span {
+    padding-right: $gutter;
+  }
+
   @media (max-width: $breakpoint-tablet){
     .logos-row {
       flex-direction: column;
